Fixed Drawer Menu
Converted drawer menu items to listview items for conviency

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,6 @@
     <color name="google_plus">#dd4b39</color>
     <color name="twitter">#55acee</color>
     <color name="whiteAlpha">#66ffffff</color>
+    <color name="whiteAlpha80">#ccffffff</color>
+    <color name="lightBlueLigthen1">#81d4fa</color>
 </resources>
