--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -3,24 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="240dp"
+    android:layout_height="260dp"
     android:paddingTop="40dp"
     android:background="@android:color/transparent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal">
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
             <android.support.v7.widget.CardView
-                android:id="@+id/profile_pic_wrapper"
+                android:id="@+id/photoViewParent"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 app:cardCornerRadius="60dp"
                 app:cardElevation="10dp">
 
                 <ImageView
-                    android:id="@+id/profile_pic"
+                    android:id="@+id/photoView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="fitXY"
@@ -28,7 +29,30 @@
 
             </android.support.v7.widget.CardView>
 
+            <TextView
+                android:id="@+id/nameView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:textSize="24sp"
+                android:textColor="@color/blue_grey_ligthen_5"
+                android:layout_marginTop="10dp"
+                />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/emailOrPhoneView"
+                android:textSize="18sp"
+                android:textColor="@color/blue_grey_ligthen_5"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/authByView"
+                android:textSize="14sp"
+                android:textColor="@color/whiteAlpha" />
         </LinearLayout>
 
 </RelativeLayout>
