--- a/app/src/main/res/layout/navigation_drawer.xml
+++ b/app/src/main/res/layout/navigation_drawer.xml
@@ -7,11 +7,34 @@
     android:layout_height="match_parent"
     android:layout_gravity="start"
     android:background="@drawable/nav_drawer_bg"
-    app:menu="@menu/drawer_menu"
-    app:itemBackground="@android:color/transparent"
-    app:elevation="0dp"
-    app:headerLayout="@layout/nav_header"
-    app:itemIconTint="@color/blue_grey_lighten_1"
-    app:itemTextColor="@color/blue_grey_lighten_1"
-    android:clickable="true"
-    />
+    app:elevation="0dp">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <include layout="@layout/nav_header" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.2dp"
+            android:background="@color/whiteAlpha"
+            />
+
+        <android.support.v7.widget.ListViewCompat
+            android:id="@+id/drawerListView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:divider="@color/whiteAlpha"
+            android:dividerHeight="0.2dp">
+        </android.support.v7.widget.ListViewCompat>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.2dp"
+            android:background="@color/whiteAlpha"
+            />
+
+    </LinearLayout>
+</android.support.design.widget.NavigationView>
